# llm-alert-investigator

./: SPEC.md
llm-alert-investigator/: .env.example  README.md  pyproject.toml  requirements.txt
llm-alert-investigator/data/: ground_truth_labels.csv
llm-alert-investigator/data/sample_alerts/: attack_samples.json  benign_samples.json
llm-alert-investigator/notebooks/: 01_exploration.ipynb
llm-alert-investigator/prompts/: investigation_prompt.txt
llm-alert-investigator/src/: __init__.py  app.py  evaluator.py  investigator.py  kb_builder.py  preprocessor.py
llm-alert-investigator/tests/: __init__.py  test_investigator.py  test_preprocessor.py
